--- a/deploymentservice.yaml
+++ b/deploymentservice.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: spring-boot-k8s
-          image: devops-integration
+          image: devops-integration:v1
           # Image that will be used to containers in the cluster
           imagePullPolicy: IfNotPresent
           ports:
