--- a/deploymentservice.yaml
+++ b/deploymentservice.yaml
@@ -8,6 +8,8 @@ spec:
       app: spring-boot-k8s
   replicas: 2 # Number of replicas that will be created for this deployment
   template:
+    imagePullSecrets:
+        - name: regcred
     metadata:
       labels:
         app: spring-boot-k8s
